<resources>
    <string name="app_name">Aguna</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_button_description">Login with Google Account</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="alert_exit_app">Exit App</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="daftar">Sign Up</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="masukkan_nama_lengkap">Input Full Name</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Input Email</string>
    <string name="atau">Or</string>
    <string name="daftar_dengan_google">Sign In With Google</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Input Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="masukkan_ulang_password">Retype Password</string>
    <string name="sudah_punya_akun_masuk">Already Have An Account? Sign In</string>
    <string name="masuk">Sign In</string>
    <string name="lupa_kata_sandi">Forgot Password?</string>
    <string name="belum_punya_akun_daftar">Does Not Have An Account Yet? Sign Up</string>
    <string name="masuk_dengan_google">Sign In With Google</string>
    <string name="title_activity_splash_slider">SplashSliderActivity</string>
    <string name="verification_email_sent_to">Verification Email Sent To</string>
    <string name="please_check_your_email">Please Check Your Email</string>
    <string name="ok">ok</string>
    <string name="check_email">Check Email</string>
    <string name="resend_verification">Resend Verification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lewati">Skip</string>
    <string name="todo">TODO</string>
    <string name="title_text">Title Text</string>
    <string name="description_text">Description Text</string>
    <string name="textview">TextView</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_kode_otp">Masukkan kode OTP yang telah dikirimkan melalui SMS</string>
    <string name="submit">Submit</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="kirim_ulang">Kirim ulang</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="kode_otp_belum_terkirim">Kode OTP belum terkirim?</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="data_profil">Data Profil</string>
    <string name="ubah_perbarui_data_profil">Ubah dan perbarui data profilku</string>
    <string name="atur_kata_sandi">Atur Kata Sandi</string>
    <string name="atur_kata_sandi_akun">Atur kata sandi untuk akun anda</string>
    <string name="bantuan">Bantuan</string>
    <string name="faq">FAQ</string>
    <string name="pusat_bantuan">Pusat Bantuan 24 Jam</string>
    <string name="tentang">Tentang</string>
    <string name="versi_aguna">Versi 1.0 Aguna</string>
    <string name="logout">LOGOUT</string>
    <string name="nama_lengkap_in">Nama Lengkap</string>
    <string name="masukan_nama_lengkap_in">Masukan nama lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="masukan_tanggal_lahir">Masukan tanggal lahir</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="masukan_alamat_sesuai_ktp">Masukan alamat sesuai KTP</string>
    <string name="no_identitas">No. Identitas /KTP/SIM/Passport</string>
    <string name="masukan_nomor_identitas">Masukan nomor identitas</string>
    <string name="no_hp">No. HP</string>
    <string name="masukan_nomor_handphone">Masukan nomor handphone</string>
    <string name="no_rekening">No. Rekening</string>
    <string name="masukan_nomor_rekening_bank">Masukan nomor rekening bank</string>
    <string name="perbarui">PERBARUI</string>
    <string name="atur_password">Atur Password</string>
    <string name="masukan_password">Masukan password</string>
    <string name="password_baru">Password Baru</string>
    <string name="masukan_password_baru">Masukan password baru</string>
    <string name="re_type_kata_password">Re-type Kata Password</string>
    <string name="masukan_ulang_password_baru">Masukan ulang password baru</string>
    <string name="ganti_password">GANTI PASSWORD</string>
    <string name="title_activity_profile_acitivity">ProfileAcitivity</string>
    <string name="aguna">aguna</string>
    <string name="previous_transactions">Previous Transactions</string>
    <string name="your_rating">Your Rating</string>
    <string name="trash_category">Trash Category</string>
    <string name="trash_info">Trash Info</string>
    <string name="sell_trash">Sell Trash</string>
    <string name="offer">Offer</string>
    <string name="dapatkan_berbagai_penawaran_menarik_untuk_anda">Dapatkan berbagai penawaran menarik untuk anda</string>
    <string name="news">News</string>
    <string name="berita_menarik_aguna_siap_menemani_hari_anda">Berita menarik aguna siap menemani hari anda</string>
    <string name="hai_aguna">Hai, Aguna</string>
    <string name="sell">Sell</string>
    <string name="kg">Kg</string>
</resources>