<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.profile.DataProfile">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/profile_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/data_profil"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/profile_header_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView8" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nama_lengkap_in"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView14" />

        <EditText
            android:id="@+id/editTextNamaLengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/line_text_profile"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/masukan_nama_lengkap_in"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView17" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/tanggal_lahir"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNamaLengkap" />

        <EditText
            android:id="@+id/editTextNamaLengkap2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/line_text_profile"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/masukan_tanggal_lahir"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView18" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/alamat_lengkap"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNamaLengkap2" />

        <EditText
            android:id="@+id/editTextNamaLengkap3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/line_text_profile"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/masukan_alamat_sesuai_ktp"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView19" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/no_identitas"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNamaLengkap3" />

        <EditText
            android:id="@+id/editTextNamaLengkap4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/line_text_profile"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/masukan_nomor_identitas"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView20" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/no_hp"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNamaLengkap4" />

        <EditText
            android:id="@+id/editTextNamaLengkap5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/line_text_profile"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/masukan_nomor_handphone"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView21" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/no_rekening"
            android:textColor="@color/txt_color_sign_item"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNamaLengkap5" />

        <EditText
            android:id="@+id/editTextNamaLengkap6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/line_text_profile"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/masukan_nomor_rekening_bank"
            android:paddingBottom="16dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView22" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_btn_sign"
            android:fontFamily="@font/montserrat_bold"
            android:paddingVertical="16dp"
            android:text="@string/perbarui"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNamaLengkap6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>